update report apis with comments for mobile developer
